Further layout HTML and CSS

--- a/index.html
+++ b/index.html
@@ -115,7 +115,91 @@
                 </div>
 
             </div>
-            <section id="content-main"></section>
+            <section id="content-main">
+                <div id="content-wrapper">
+                    <section id="projects">
+                        <h2>Your Projects</h2>
+                        <div id="card-wrapper">
+                            <div class="card">
+                                <h3 class="card-title">Lorem, ipsum dolor.</h3>
+                                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, sed voluptatem impedit quos qui quibusdam nemo? Aliquam aliquid cum consequuntur ratione quidem commodi impedit nihil molestiae! At doloribus, voluptas, dolorum eius qui illum dolores expedita id aspernatur repellendus, incidunt iure?</p>
+                                <div class="card-icon-container">
+                                    <span class="material-icons-outlined card-icon">favorite_border</span>
+                                    <span class="material-icons-outlined card-icon">save</span>
+                                    <span class="material-icons-outlined card-icon">share</span>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <h3 class="card-title">Lorem, ipsum dolor.</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt est accusantium totam alias iure ducimus.</p>
+                                <div class="card-icon-container">
+                                    <span class="material-icons-outlined card-icon">favorite_border</span>
+                                    <span class="material-icons-outlined card-icon">save</span>
+                                    <span class="material-icons-outlined card-icon">share</span>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <h3 class="card-title">Lorem, ipsum dolor.</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt est accusantium totam alias iure ducimus.</p>
+                                <div class="card-icon-container">
+                                    <span class="material-icons-outlined card-icon">favorite_border</span>
+                                    <span class="material-icons-outlined card-icon">save</span>
+                                    <span class="material-icons-outlined card-icon">share</span>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <h3 class="card-title">Lorem, ipsum dolor.</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt est accusantium totam alias iure ducimus.</p>
+                                <div class="card-icon-container">
+                                    <span class="material-icons-outlined card-icon">favorite_border</span>
+                                    <span class="material-icons-outlined card-icon">save</span>
+                                    <span class="material-icons-outlined card-icon">share</span>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <h3 class="card-title">Lorem, ipsum dolor.</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt est accusantium totam alias iure ducimus.</p>
+                                <div class="card-icon-container">
+                                    <span class="material-icons-outlined card-icon">favorite_border</span>
+                                    <span class="material-icons-outlined card-icon">save</span>
+                                    <span class="material-icons-outlined card-icon">share</span>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <h3 class="card-title">Lorem, ipsum dolor.</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt est accusantium totam alias iure ducimus.</p>
+                                <div class="card-icon-container">
+                                    <span class="material-icons-outlined card-icon">favorite_border</span>
+                                    <span class="material-icons-outlined card-icon">save</span>
+                                    <span class="material-icons-outlined card-icon">share</span>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section id="announcements">
+                        <h2>Announcements</h2>
+                        <div id="announcements-card">
+                            <div class="announcement">
+                                <h3 class="announcement-title">Lorem, ipsum.</h3>
+                                <p class="announcement-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                            </div>
+                            <div class="separator"></div>
+                            <div class="announcement">
+                                <h3 class="announcement-title">Lorem, ipsum dolor.</h3>
+                                <p class="announcement-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                            </div>
+                            <div class="separator"></div>
+                            <div class="announcement">
+                                <h3 class="announcement-title">Lorem ipsum dolor sit.</h3>
+                                <p class="announcement-content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                            </div>
+                        </div>
+                    </section>
+                    <section id="trending">
+                        <h2>Trending</h2>
+                    </section>
+                </div>
+            </section>
         </section>
     </main>
 </body>
