Added further dummy images to ./images, completed initial HTML & CSS layout.

--- a/index.html
+++ b/index.html
@@ -197,6 +197,52 @@
                     </section>
                     <section id="trending">
                         <h2>Trending</h2>
+                        <div id="trending-card">
+                            <div class="trending-entry">
+                                <div class="trending-handle">
+                                    <p>@user</p>
+                                </div>
+                                <div class="trending-title">
+                                    <p>Did mundane stuff</p>
+                                </div>
+                                <div class="profile-pic-small">
+                                    <img src="./images/profile-pic2.png" alt="Handle">
+                                </div>
+                            </div>
+                            <div class="trending-entry">
+                                <div class="trending-handle">
+                                    <p>@inventor</p>
+                                </div>
+                                <div class="trending-title">
+                                    <p>Invented cool</p>
+                                </div>
+                                <div class="profile-pic-small">
+                                    <img src="./images/profile-pic3.png" alt="Handle">
+                                </div>
+                            </div>
+                            <div class="trending-entry">
+                                <div class="trending-handle">
+                                    <p>@magician</p>
+                                </div>
+                                <div class="trending-title">
+                                    <p>Perform wonders</p>
+                                </div>
+                                <div class="profile-pic-small">
+                                    <img src="./images/profile-pic4.png" alt="Handle">
+                                </div>
+                            </div>
+                            <div class="trending-entry">
+                                <div class="trending-handle">
+                                    <p>@pirate</p>
+                                </div>
+                                <div class="trending-title">
+                                    <p>Is a pirate</p>
+                                </div>
+                                <div class="profile-pic-small">
+                                    <img src="./images/profile-pic.png" alt="Handle">
+                                </div>
+                            </div>
+                        </div>
                     </section>
                 </div>
             </section>
