Initial styling concept and fix on some broken properties.

--- a/index.html
+++ b/index.html
@@ -24,37 +24,37 @@
                     <li>
                         <a href="#">
                             <span class="material-icons sidebar-nav-icon">home</span>
-                            <span id="home-link">Home</span>
+                            <span id="home-link" class="sidebar-link">Home</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="material-icons sidebar-nav-icon">assignment</span>
-                            <span id="tasks-link">Tasks</span>
+                            <span id="tasks-link" class="sidebar-link">Tasks</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="material-icons sidebar-nav-icon">message</span>
-                            <span id="messages-link">Messages</span>
+                            <span id="messages-link" class="sidebar-link">Messages</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="material-icons sidebar-nav-icon">contacts</span>
-                            <span id="contacts-link">Contacts</span>
+                            <span id="contacts-link" class="sidebar-link">Contacts</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="material-icons sidebar-nav-icon">calendar_month</span>
-                            <span id="calendar-link">Calendar</span>
+                            <span id="calendar-link" class="sidebar-link">Calendar</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="material-icons sidebar-nav-icon">person</span>
-                            <span id="profile-link">Profile</span>
+                            <span id="profile-link" class="sidebar-link">Profile</span>
                         </a>
                     </li>
                 </ul>
@@ -65,19 +65,19 @@
                     <li>
                         <a href="#">
                             <span class="material-icons sidebar-nav-icon">settings</span>
-                            <span id="settings-link">Settings</span>
+                            <span id="settings-link" class="sidebar-link">Settings</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="material-icons sidebar-nav-icon">security</span>
-                            <span id="privacy-link">Privacy</span>
+                            <span id="privacy-link" class="sidebar-link">Privacy</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="material-icons sidebar-nav-icon">help</span>
-                            <span id="help-and-support-link">Help & Support</span>
+                            <span id="help-and-support-link" class="sidebar-link">Help & Support</span>
                         </a>
                     </li>
                 </ul>
@@ -122,7 +122,7 @@
                         <div id="card-wrapper">
                             <div class="card">
                                 <h3 class="card-title">Lorem, ipsum dolor.</h3>
-                                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, sed voluptatem impedit quos qui quibusdam nemo? Aliquam aliquid cum consequuntur ratione quidem commodi impedit nihil molestiae! At doloribus, voluptas, dolorum eius qui illum dolores expedita id aspernatur repellendus, incidunt iure?</p>
+                                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, suscipit.</p>
                                 <div class="card-icon-container">
                                     <span class="material-icons-outlined card-icon">favorite_border</span>
                                     <span class="material-icons-outlined card-icon">save</span>
