Initial styling work complete. Cleaned for merge.

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             </div>
                             <div class="card">
                                 <h3 class="card-title">Lorem, ipsum dolor.</h3>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt est accusantium totam alias iure ducimus.</p>
+                                <p class="card-text">Sunt est accusantium totam alias iure ducimus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto quam, reiciendis dolores aperiam necessitatibus, illum quasi ab sit, distinctio expedita.</p>
                                 <div class="card-icon-container">
                                     <span class="material-icons-outlined card-icon">favorite_border</span>
                                     <span class="material-icons-outlined card-icon">save</span>
